<resources>
    <string name="app_name">Pixabay App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comments">Comments</string>
    <string name="likes">Likes</string>
    <string name="downloads">Downloads</string>
    <string name="image_tags">Image Tags</string>
    <string name="user">User</string>
</resources>